--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Browser Linux</title>
+<title>ReactOS</title>
 <style type="text/css">
 body {
 background-color: black;
@@ -28,7 +28,7 @@ color: white;
 <p class="statusbar" id="save_time"></p>
 <script src="startup.js" defer></script>
 <script src="buttons.js" defer></script>
-<h4 class="fluff">Welcome to Browser Linux</h4>
+<h4 class="fluff">Welcome to Browser ReactOS</h4>
 <p id="waiting_text">
  Waiting for boot to complete, please wait . . . <br>
 </p>
@@ -37,7 +37,7 @@ color: white;
     <canvas id="vga" style="display: none" onclick="emulator.lock_mouse()"></canvas>
 </div>
 <div id="terminal"></div>
-<h4 class="fluff">It's Linux, in a Browser</h4>
+<h4 class="fluff">It's ReactOS, in a Browser</h4>
 <img class="fluff" id="toggle" src="icon/toolbox.png" onclick="toggleToolbox()" width="25px" height="25px"></img>
 <div id="toolbox_div" class="toolbox">
 <button id="save_restore" onclick="saveRestore()">save current point</button>
